<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="modelview"
                  type="com.icedcap.exploredesignlib.MainActivity.MainViewModel"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.icedcap.exploredesignlib.MainActivity">

            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->modelview.startActivity(modelview.snackbar)}"
                    android:text="@string/btn_snack_bar"/>

            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->modelview.startActivity(modelview.fab)}"
                    android:text="@string/btn_fab"/>

            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->modelview.startActivity(modelview.textInput)}"
                    android:text="@string/btn_textview_floating_label"/>

            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->modelview.startActivity(modelview.navigation)}"
                    android:text="@string/btn_navigation"/>

            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->modelview.startActivity(modelview.tab)}"
                    android:text="@string/btn_tablayout"/>
            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->modelview.startActivity(modelview.coordinator)}"
                    android:text="@string/btn_coordinator"/>
            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->modelview.startActivity(modelview.collapse)}"
                    android:text="@string/btn_collapse"/>
            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->modelview.startActivity(modelview.parallax)}"
                    android:text="@string/btn_parallax"/>
        </LinearLayout>
    </ScrollView>

</layout>

