<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.databinding.ObservableField"/>
        <variable name="viewModel" type="com.icedcap.exploredesignlib.EmailViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:error="@{viewModel.addressError}">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/et_email_address"
                      android:inputType="textEmailAddress"
                      app:binding="@{viewModel.address}"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:error="@{viewModel.passwordError}">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/et_password"
                      android:inputType="textPassword"
                      app:binding="@{viewModel.password}"/>
        </android.support.design.widget.TextInputLayout>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{(v)->viewModel.validate(v)}"
                android:text="@string/btn_validate"/>
    </LinearLayout>
</layout>
